src/article/highlight.scss
.content {
  code[data-theme*=" "] {
    color: var(--shiki-light);
    background-color: var(--shiki-light-bg);

    span {
      color: var(--shiki-light);
      background-color: transparent;
    }
  }

  // Line numbers
  code[data-line-numbers] {
    counter-reset: line;

    >[data-line]::before {
      counter-increment: line;
      content: counter(line);
      display: inline-block;
      width: 0.75rem;
      margin-right: 2rem;
      text-align: right;
      color: gray;
    }
  }

  code[data-line-numbers-max-digits="2"]>[data-line]::before {
    width: 1.25rem;
  }

  code[data-line-numbers-max-digits="3"]>[data-line]::before {
    width: 1.75rem;
  }

  code[data-line-numbers-max-digits="4"]>[data-line]::before {
    width: 2.25rem;
  }

  // Prevents overflow
  pre>code {
    overflow-x: auto;
    padding: 1rem 0;

    [data-line] {
      padding: 0 1rem;
    }
  }

  // Font
  code[data-theme*=" "] {
    font-family: var(--primaryFont);
  }

  // Highlighted line
  pre [data-line] {
    border-left: solid 2px transparent;
  }

  [data-highlighted-line]:not(#fakeId) {
    background-color: rgba(var(--mui-palette-warning-mainChannel) / 0.15);
    border-left-color: var(--mui-palette-warning-main);
    padding-right: 1rem;
    padding-left: 1rem;
  }

  // Others
  [data-rehype-pretty-code-figure] {
    border-radius: 4px;
  }

  span[data-rehype-pretty-code-figure]>code {
    padding: 0 0.5rem;
  }

  figure[data-rehype-pretty-code-figure] {
    margin: 1rem 0;
    padding: 0;
    background-color: var(--mui-palette-background-paperSecondary);

    >pre {
      position: relative;
      margin: 0;
    }

    figcaption {
      padding: 0.5rem;
    }
  }
}

:global(.dark) {
  .content {
    code[data-theme*=" "] {
      color: var(--shiki-dark);
      background-color: var(--shiki-dark-bg);

      span {
        color: var(--shiki-dark);
        background-color: transparent;
      }
    }
  }
}

